fix todo-list overflowing bug

--- a/src/Credits.css
+++ b/src/Credits.css
@@ -6,8 +6,6 @@
   outline: 1px solid gray;
   padding-block: 1.5rem;
   width: 456px;
-  position: absolute;
-  bottom: 5rem;
 }
 
 .Credits p {
