--- a/src/TodoList.css
+++ b/src/TodoList.css
@@ -5,6 +5,9 @@
   background: #ff6666;
   color: #fff;
   box-shadow: -20px -20px 0px 0px rgba(100, 100, 100, 0.1);
+
+  z-index: 100;
+  max-height: 100%;
 }
 
 .TodoList ul {
